Create test templates and blueprint

--- a/app/posts/templates/posts/index.html
+++ b/app/posts/templates/posts/index.html
@@ -1,13 +1,13 @@
 {% extends "base.html" %}
 
 {% block title %}
-	Index page
+	Blueprint index page
 {% endblock title %}
 
 {% block content_title %}
-	Index page
+	Blueprint index page
 {% endblock content_title %}
 
 {% block content %}
-	Some content
+	Blueprint some content
 {% endblock content %}
