--- a/app/posts/templates/posts/index.html
+++ b/app/posts/templates/posts/index.html
@@ -5,9 +5,16 @@
 {% endblock title %}
 
 {% block content_title %}
-	Blueprint index page
+	Posts
 {% endblock content_title %}
 
 {% block content %}
-	Blueprint some content
+	
+	{% for post in posts %}
+		<p>
+			<a href="{{ url_for('posts.post_detail', slug=post.slug) }}">{{ post.title }}</a>
+		</p>
+		
+	{% endfor %}
+
 {% endblock content %}
