--- a/app/posts/templates/posts/detail.html
+++ b/app/posts/templates/posts/detail.html
@@ -9,5 +9,13 @@
 {% endblock content_title %}
 
 {% block content %}
-	{{ post.body }}
+	<div class="tags">
+		{% for tag in tags %}
+			<a href="{{ url_for('posts.tag_detail', slug=tag.slug) }}"><span class="badge bg-primary">{{ tag.name }}</span></a>
+		{% endfor %}
+	</div>
+	
+	<div class="main-content">
+		{{ post.body }}
+	</div>
 {% endblock content %}
