--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -22,10 +22,7 @@
 	          <a class="nav-link active" aria-current="page" href=" {{ url_for('posts.index') }} ">Blog</a>
 	        </li>
 	        <li class="nav-item">
-	          <a class="nav-link" href="#">Link</a>
-	        </li>
-	        <li class="nav-item">
-	          <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
+	          <a class="nav-link" href="{{ url_for('posts.create_post') }}">+ New post</a>
 	        </li>
 	      </ul>
 
